--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -84,7 +84,15 @@
 
     <div id="redDot"><img src="../img/redDot.png" alt="Laser Pointer"></div>
 
-  	<center><div id="video-gallery" class="royalSlider videoGallery rsDefault"></div></center>
+  	<center>
+      <div id="screensharing" class="rsContainer">
+        <h1><div class="closeVideo" id="closescreensharing" style="position: absolute; right: 6%; top: 5%;">
+        </div></h1>
+        <iframe width="100%" height="100%" id="screensharingiframe" style="margin-left:5%;" scrolling="no"></iframe>
+      </div>
+
+      <div id="video-gallery" class="royalSlider videoGallery rsDefault">
+      </div></center>
 
 	<div id="personalNotes">
 		<div class="closevideo" id="closePersonalNotes"></div>
@@ -176,10 +184,10 @@
 	<div id="personalNotesPanel"></div>
 	-->
 
-		<div id="screensharing">
+		<!-- <div id="screensharing">
 		<h1><div class="closescreensharing" id="closescreensharing">x</div></h1>
 		<iframe width="100%" height="100%" id="screensharingiframe"  scrolling="no"></iframe>
-	</div>
+	</div> -->
 	<div id="videochatpanel"></div>
 	<div id="videochat">
 		<span class="closeLiveVideo"><div class="closevideo" id="closevideo"></div></span>
