--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -78,7 +78,7 @@
 
 	<div id="sliteWatermak" style="height:40px; line-height:40px;">
         <span style="vertical-align:top;" id='menuTitle'></span>
-        <span style="vertical-align:top;" alt="Website Menu">☰</span>
+        <span style="vertical-align:top;" alt="Website Menu" class="menuButton">☰</span>
     </div>
 
 
