--- a/AWS_Website/www_static/signup.html
+++ b/AWS_Website/www_static/signup.html
@@ -70,7 +70,7 @@
                           <span class="icon-bar"></span>
                           <span class="icon-bar"></span>
                         </button>
-                        <a href="/" class="logo"><img src="img/logo.png" width=100px></a>
+                        <!-- <a href="/" class="logo"><img src="img/logo.png" width=100px></a> -->
                       </div>
 
                       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style='z-index: 5'>
@@ -97,16 +97,16 @@
                         <ul class="nav navbar-nav navbar-right">
                           <li class="link-signin">
                             <% if (!user) { %>
-                              <a href="signin.html"><span class="fa fa-sign-in"></span> Sign in</a>
+                              <a href="signin.html"><span class="fa fa-sign-in"></span> Sign In</a>
                            <% } else { %>
-                              <a href="/account.html"><span class="fa fa-user"></span> Hello, <%= user.username %>.</a>
+                              <a href="/account.html"><span class="fa fa-user"></span> Hello, <%= user.username %></a>
                             <% } %> 
                           </li>
                           <li class="link-signin">
                            <% if (!user) { %> 
-                              <a href="signup.html"><span class="fa fa-user-plus"></span> Sign up</a>
+                              <a href="signup.html"><span class="fa fa-user-plus"></span> Sign Up</a>
                            <% } else { %>
-                              <a href="/logout"><span class="fa fa-sign-out"></span> Sign out.</a>
+                              <a href="/logout"><span class="fa fa-sign-out"></span> Sign Out</a>
                             <% } %>
                           </li>
                         </ul>
