--- a/AWS_Website/www_static/signin.html
+++ b/AWS_Website/www_static/signin.html
@@ -28,7 +28,7 @@
             <div class="container-fluid">
 
                 <form class="m-form-signin" role="form" action="/signin.html" method="post">
-                    <h1>Sign in</h1>
+                    <h1>Sign In</h1>
 		    <% if (request.query.REG_OK == 1) { %>
 				<h4 style="color: #FF0000">Congrats! You have registered. Enter your password to log in.</h4>
 		    <% } %>
@@ -68,7 +68,7 @@
                           <span class="icon-bar"></span>
                           <span class="icon-bar"></span>
                         </button>
-                        <a href="/" class="logo"><img src="img/logo.png" width=100px></a>
+                        <!-- <a href="/" class="logo"><img src="img/logo.png" width=100px></a> -->
                       </div>
 
                       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style='z-index: 5'>
@@ -95,16 +95,16 @@
                         <ul class="nav navbar-nav navbar-right">
                           <li class="link-signin">
                             <% if (!user) { %>
-                              <a href="signin.html"><span class="fa fa-sign-in"></span>  Sign in</a>
+                              <a href="signin.html"><span class="fa fa-sign-in"></span>  Sign In</a>
                             <% } else { %>
-                              <a href="/account.html"><span class="fa fa-user"></span> Hello, <%= user.username %>.</a>
+                              <a href="/account.html"><span class="fa fa-user"></span> Hello, <%= user.username %></a>
                             <% } %> 
                           </li>
                           <li class="link-signin">
                             <% if (!user) { %> 
-                              <a href="signup.html"><span class="fa fa-user-plus"></span> Sign up</a>
+                              <a href="signup.html"><span class="fa fa-user-plus"></span> Sign Up</a>
                             <% } else { %>
-                              <a href="/logout"><span class="fa fa-sign-out"></span> Sign out.</a>
+                              <a href="/logout"><span class="fa fa-sign-out"></span> Sign Out</a>
                             <% } %>
                           </li>
                         </ul>
