--- a/AWS_Website/www_static/my.html
+++ b/AWS_Website/www_static/my.html
@@ -9,6 +9,11 @@
         <title>Slite - web presentation software</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- font -->
+        <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+        <!-- font icons -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         
 		<!--<script src="js/jquery-2.1.3.min.js"></script>
 		<script src="/socket.io/socket.io.js"></script>
@@ -66,7 +71,7 @@
                           <span class="icon-bar"></span>
                           <span class="icon-bar"></span>
                         </button>
-                        <a href="/" class="logo"><img src="img/logo.png" width=100px></a>
+                        <!-- <a href="/" class="logo"><img src="img/logo.png" width=100px></a> -->
                       </div>
 
                       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style='z-index: 5'>
@@ -93,16 +98,16 @@
                         <ul class="nav navbar-nav navbar-right">
                           <li class="link-signin">
                             <% if (!user) { %>
-                              <a href="signin.html"><span class="glyphicon glyphicon-user"></span> Sign in</a>
+                              <a href="signin.html"><span class="fa fa-sign-in"></span> Sign In</a>
                             <% } else { %>
-                              <a href="/account.html"><span class="glyphicon glyphicon-user"></span> Hello, <%= user.username %>.</a>
+                              <a href="/account.html"><span class="fa fa-user"></span> Hello, <%= user.username %></a>
                             <% } %> 
                           </li>
                           <li class="link-signin">
                             <% if (!user) { %> 
-                              <a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign up</a>
+                              <a href="signup.html"><span class="fa fa-user-plus"></span> Sign Up</a>
                             <% } else { %>
-                              <a href="/logout"><span class="glyphicon glyphicon-user"></span> Sign out.</a>
+                              <a href="/logout"><span class="fa fa-sign-out"></span> Sign Out</a>
                             <% } %>
                           </li>
                         </ul>
