--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -73,7 +73,7 @@
 <!-- End Google Tag Manager --><br>
 
 
-	<canvas id="drawCanvas" ></canvas>
+	<canvas id="drawCanvas" style="height:100vh; !important" ></canvas>
 
 
 	<div id="sliteWatermak" style="height:40px; line-height:40px;">
@@ -188,7 +188,7 @@
 		<h1><div class="closescreensharing" id="closescreensharing">x</div></h1>
 		<iframe width="100%" height="100%" id="screensharingiframe"  scrolling="no"></iframe>
 	</div> -->
-	<div id="videochatpanel"></div>
+	<!-- <div id="videochatpanel"></div> -->
 	<div id="videochat">
 		<span class="closeLiveVideo"><div class="closevideo" id="closevideo"></div></span>
 		<iframe width="100%" height="100%" id="videoframe" scrolling="no"></iframe>
