--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -95,11 +95,11 @@
                 <li><a href="#three" data-index="three" class="menuLink">Company</a></li>
                 <li><a href="#four" data-index="four" class="menuLink">Contact</a></li>
                     <% if (!user) { %>
-                    	<li><a href="signin.html" data-index="three" class="glyphicon glyphicon-user">Sign in</a></li>
-			<li><a href="signup.html" data-index="four" class="glyphicon glyphicon-user">Sign up</a></li>
+                    	<li><a href="signin.html" data-index="three" class="">Sign in</a></li>
+			<li><a href="signup.html" data-index="four" class="">Sign up</a></li>
                     <% } else { %>
-			<li><a href="/my.html" data-index="three" class="glyphicon glyphicon-user"> Hello, <%= user.email %></a></li>
-			<li><a href="/logout" data-index="three" class="glyphicon glyphicon-user">Sign out</a></li>
+			<li><a href="/my.html" data-index="three" class=""> Hello, <%= user.email %></a></li>
+			<li><a href="/logout" data-index="three" class="">Sign out</a></li>
                     <% } %>
             </ul>
         </nav>
