--- a/AWS_Website/www_static/my.html
+++ b/AWS_Website/www_static/my.html
@@ -4,46 +4,41 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Slite - web presentation software</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <!-- font -->
-        <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-        <!-- font icons -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-        
-		<!--<script src="js/jquery-2.1.3.min.js"></script>
-		<script src="/socket.io/socket.io.js"></script>
-        <script>window.jQuery || document.write('<script src="js/jquery-2.1.1.min.js"><\/script>')</script>
-        <script src="js/bootstrap.js"></script>
-        <script src="js/main.js"></script>-->
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <title>Slite - web presentation software</title>
+      <meta name="description" content="">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
 		
-    <script src="js/jquery-2.1.3.min.js"></script>
-    <script src="js/jquery.scrolly.min.js"></script>
-    <script src="js/jquery.dropotron.min.js"></script>
-    <script src="js/jquery.scrollex.min.js"></script>
-    <script src="js/skel.min.js"></script>
-    <script src="js/skel-layers.min.js"></script>
-    <script src="js/init.js"></script>
-    <script src="js/jquery-ui.min.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="js/client.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/jquery.scrollTo.js"></script>
+      <script src="js/jquery-2.1.3.min.js"></script>
+      <script src="js/jquery.scrolly.min.js"></script>
+      <script src="js/jquery.dropotron.min.js"></script>
+      <script src="js/jquery.scrollex.min.js"></script>
+      <script src="js/skel.min.js"></script>
+      <script src="js/skel-layers.min.js"></script>
+      <script src="js/init.js"></script>
+      <script src="js/jquery-ui.min.js"></script>
+      <script src="js/bootstrap.js"></script>
+      <script src="/socket.io/socket.io.js"></script>
+      <script src="js/client.js"></script>
+      <script src="js/main.js"></script>
+      <script src="js/jquery.scrollTo.js"></script> 
 
 		
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-        <link rel="icon" href="favicon.ico" type="image/x-icon">
+      <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+      <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-        <link rel="stylesheet" href="css/bootstrap.css">
-        <link rel="stylesheet" href="css/screen.css">
+      <link rel="stylesheet" href="css/bootstrap.css">
+      <link rel="stylesheet" href="css/screen.css">
+      <link rel="stylesheet" href="css/style.css" />
+
+       <!-- font -->
+      <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+      <!-- font icons -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
     </head>
-    <body style='background-image: url(img/Slite_Background.jpg);'>
+    <body>
         <section class="middle">
             <div class="container-fluid">
                     <h1>My uploads</h1>
@@ -57,63 +52,22 @@
 					</table>
             </div>
         </section>
-				<input type="file" accept="pptx" id="uploadPresentation" style="display: none">		
-		<div class="back" href="http://www.slite.us">
-
-        <nav class="navbar navbar-default m-navbar" role="navigation">
-
-                  <div class="container-fluid">
-                      <!-- Brand and toggle get grouped for better mobile display -->
-                      <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                          <span class="sr-only">Toggle navigation</span>
-                          <span class="icon-bar"></span>
-                          <span class="icon-bar"></span>
-                          <span class="icon-bar"></span>
-                        </button>
-                        <!-- <a href="/" class="logo"><img src="img/logo.png" width=100px></a> -->
-                      </div>
-
-                      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style='z-index: 5'>
-                        <ul class="nav navbar-nav">
-                          <li>
-                              <a href="http://www.slite.us#2" class='menuLink' id='menuAbout'>About</a>
-                          </li>
-                          <li>
-                              <a href="http://www.slite.us#3" class='menuLink' id='menuContact'>Contact</a>
-                          </li>
-                        </ul>
-
-                        <!--<form class="navbar-form navbar-left" role="search">
-                            <div class="form-group">
-                                <div class="input-group">
-                                    <input type="text" class="form-control btn-create" placeholder="Search...">
-                                    <span class="input-group-btn">
-                                        <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
-                                    </span>
-                                </div>
-                            </div>
-                        </form>-->
-
-                        <ul class="nav navbar-nav navbar-right">
-                          <li class="link-signin">
-                            <% if (!user) { %>
-                              <a href="signin.html"><span class="fa fa-sign-in"></span> Sign In</a>
-                            <% } else { %>
-                              <a href="/account.html"><span class="fa fa-user"></span> Hello, <%= user.username %></a>
-                            <% } %> 
-                          </li>
-                          <li class="link-signin">
-                            <% if (!user) { %> 
-                              <a href="signup.html"><span class="fa fa-user-plus"></span> Sign Up</a>
-                            <% } else { %>
-                              <a href="/logout"><span class="fa fa-sign-out"></span> Sign Out</a>
-                            <% } %>
-                          </li>
-                        </ul>
-                      </div><!-- /.navbar-collapse -->
-                  </div><!-- /.container-fluid -->
+				<input type="file" accept="pptx" id="uploadPresentation" style="display: none">
+        <header id="header">
+          <nav id="nav">
+              <ul id="navigation" class="clearfix">
+                <li><a href="http://www.slite.us#2" class='menuLink' id='menuAbout'>About</a></li>
+                <li><a href="http://www.slite.us#3" class='menuLink' id='menuContact'>Contact</a></li>
+                <% if (!user) { %>
+                <li><a href="signin.html" data-index="three" class="">Sign in</a></li>
+                <li><a href="signup.html" data-index="four" class="">Sign up</a></li>
+                <% } else { %>
+                <li><a href="/my.html" data-index="three" class=""> Hello, <%= user.email %></a></li>
+                <li><a href="/logout" data-index="three" class="">Sign out</a></li>
+                <% } %>
+              </ul>
           </nav>
-    </div>
+        </header>		
+		
     </body>
 </html>
