--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -42,7 +42,6 @@
     <link class="rs-file" href="../css/rs-default.css" rel="stylesheet">
     <link class="rs-file" href="../A1/css/A1.css" rel="stylesheet">
      <!-- font   -->
-    <!-- <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'> -->
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 </head>
 
@@ -203,13 +202,13 @@
 	<nav id="primary_nav_wrap">
 		<ul>
 			<li><a href="#"></a>
-				<ul class="menuSubmenu">
+				<ul class="menuSubmenu dropdown-menu">
 				  <li><a href="javascript:showRemote()" id="menuRemote">Remote Control (live)</a></li>
 				  <li><a href="javascript:showHideComments()" id="menuOpenWallChat"><span id='chatOpenCloseLabel'></span>Chat</a></li>
 				  <li><a href="javascript:showHideVideoChat()" id="menuOpenVideoChat"><span id='videoChatOpenCloseLabel'></span>Live Video</a></li>
 				  <li><a href="javascript:showHidePersonalNotes()" id="menuPersonalNotes"><span id='personalNotesOpenCloseLabel'></span> Personal Notes</a></li>
 				  <li><a href="javascript:showHideScreensharing()" id="menuOpenScreensharing"><span id='screensharingOpenCloseLabel'></span>Screen Share</a></li>
-                  <li><a href="javascript:shareFacebook()" id="shareFacebook">Share on Facebook</a></li>
+          <li><a href="javascript:shareFacebook()" id="shareFacebook">Share on Facebook</a></li>
 				  <li><a href="javascript:shareTwitter()" id="shareTwitter">Share on Twitter</a></li>
 				  <li><a href="javascript:downloadPresentation()" id="downloadPresentation">Download Presentation</a></li>
 				  <!--<li><a href="javascript:showHideInsertVideoSlideOverlay()" id="menuInsertVideoSlide">Insert Video Slide</a></li>-->
